<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".GiaoDien.MainCongTrinh">

    <TextView
        style="@style/TextView_TitleT"
        android:text="@string/congtrinh" />

    <TextView
        style="@style/TextView_Title"
        android:text="@string/mact" />

    <EditText
        android:id="@+id/edtMaCT"
        style="@style/EditText" />

    <TextView
        style="@style/TextView_Title"
        android:text="@string/tenct" />

    <EditText
        android:id="@+id/edtTenCT"
        style="@style/EditText" />

    <TextView
        style="@style/TextView_Title"
        android:text="@string/diachict" />

    <EditText
        android:id="@+id/edtDiaChiCT"
        style="@style/EditText" />

    <LinearLayout
        style="@style/Background"
        android:gravity="center">

        <Button
            android:id="@+id/btnThem"
            style="@style/Button"
            android:background="@drawable/button1"
            android:drawableRight="@drawable/add"
            android:text="@string/them" />

        <Button
            android:id="@+id/btnXoa"
            style="@style/Button"
            android:background="@drawable/button1"
            android:drawableRight="@drawable/delete"
            android:text="@string/xoa" />

        <Button
            android:id="@+id/btnSua"
            style="@style/Button"
            android:background="@drawable/button1"
            android:drawableRight="@drawable/edit"
            android:text="@string/sua" />

        <Button
            android:id="@+id/btnClear"
            style="@style/Button"
            android:background="@drawable/button1"
            android:drawableRight="@drawable/clear"
            android:text="@string/clear" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/reCT"
        style="@style/RecyclerView">

    </androidx.recyclerview.widget.RecyclerView>


</LinearLayout>