<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".GiaoDien.MainPhieuVanChuyen">

    <TextView
        style="@style/TextView_TitleT"
        android:text="@string/phieu" />

    <TextView
        style="@style/TextView_Title"
        android:text="@string/maphieu" />

    <EditText
        android:id="@+id/edtMaPhieuVC"
        style="@style/EditText" />

    <TextView
        style="@style/TextView_Title"
        android:text="@string/ngay" />

    <EditText
        android:id="@+id/editTextDate"
        style="@style/EditText_Date" />

    <TextView
        style="@style/TextView_Title"
        android:text="@string/mact" />

    <Spinner
        android:id="@+id/spMaCT"
        style="@style/EditText" />

    <LinearLayout
        style="@style/Background"
        android:gravity="center">

        <Button
            android:id="@+id/btnThem"
            style="@style/Button"
            android:background="@drawable/button1"
            android:drawableRight="@drawable/add"
            android:text="@string/them" />

        <Button
            android:id="@+id/btnXoa"
            style="@style/Button"
            android:background="@drawable/button1"
            android:drawableRight="@drawable/delete"
            android:text="@string/xoa" />

        <Button
            android:id="@+id/btnSua"
            style="@style/Button"
            android:background="@drawable/button1"
            android:drawableRight="@drawable/edit"
            android:text="@string/sua" />

        <Button
            android:id="@+id/btnClear"
            style="@style/Button"
            android:background="@drawable/button1"
            android:drawableRight="@drawable/clear"
            android:text="@string/clear" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/reVT"
        style="@style/RecyclerView">

    </androidx.recyclerview.widget.RecyclerView>

</LinearLayout>